[package]
name = "pdf_composer"
version = "0.2.4"
authors = ["OrangeKiwi", "Richard Locke"]
edition = "2021"
rust-version = "1.77.1"
description = "Create PDF documents from YAML Front Matter source documents"
readme = "README.md"
repository = "https://github.com/orangekiwi-io/pdf_composer"
license = "MIT OR Apache-2.0"
keywords = ["PDF", "YAML", "Markdown", "generate", "Composer"]
categories = ["development-tools", "filesystem"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
chromiumoxide = "0.5.7"
colored = "2.1.0"
dotenvy = "0.15.7"
futures = "0.3.30"
lopdf = "0.32.0"
markdown = "1.0.0-alpha.16"
rayon = "1.10.0"
regex = "1.10.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.33"
url-escape = "0.1.1"
