[package]
name = "pdf_composer"
version = "0.3.0"
edition = "2021"
description = "Create PDF documents from YAML Front Matter source documents"
documentation = "https://docs.rs/crate/pdf_composer/"
license = "MIT OR Apache-2.0"
repository = "https://github.com/orangekiwi-io/pdf_composer"

[workspace.package]
authors = ["OrangeKiwi", "Richard Locke"]
categories = ["development-tools", "filesystem", "text-processing"]
documentation = "https://docs.rs/crate/pdf_composer/"
edition = "2021"
keywords = ["PDF", "YAML", "Markdown", "generate", "Composer"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/orangekiwi-io/pdf_composer"
rust-version = "1.77.1"
version = "0.3.0"

[workspace.lints.rust]
unsafe_code = "forbid"
# unused = "allow" # For experimental dev

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pdf_composer_definitions = { path = "./pdf_composer_definitions", version = "0.3.0" }
pdf_composer_base = { path = "./pdf_composer_base", version = "0.3.0" }

[workspace]
resolver = "2"
members = ["pdf_composer_definitions", "pdf_composer_base"]
default-members = ["pdf_composer_definitions", "pdf_composer_base"]

[features]
default = ["base"]
defs = []
base = ["defs"]

[[example]]
name = "basic"
